--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,11 +24,19 @@ dependencies:
   flutter:
     sdk: flutter
 
+  http: ^0.12.2
   flip_card: ^0.4.4
-
+  connectivity_widget: ^0.1.7
+  date_format: ^1.0.9
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
+  progress_dialog: ^1.2.0
+  google_maps_flutter: ^1.0.6
+  location: ^3.1.0
+  flutter_polyline_points: ^0.2.4  
+  google_maps_webservice: ^0.0.18
+  provider: ^4.3.2+2
 
 dev_dependencies:
   flutter_test:
@@ -48,6 +56,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
   - assets/
+  - assets/json/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
